# mini-rec-sys

./: .gitignore  conftest.py  pyproject.toml
.devcontainer/: devcontainer.json
examples/: msmarco_bm25.py
mini_rec_sys/: utils.py
mini_rec_sys/data/: __init__.py  data.py  datasets.py  loaders.py  samplers.py  session.py  session_collection.py
mini_rec_sys/encoders/: __init__.py  encoders.py
mini_rec_sys/evaluators/: evaluators.py
mini_rec_sys/scorers/: BM25Scorer.py  BaseScorer.py  DenseRetrievalScorer.py  DenseScorer.py  __init__.py
mini_rec_sys/trainers/: DPRModel.py  __init__.py  base_trainers.py  logger.py  stoppers.py
sample_data/msmarco_reranking/: generate_data.py  msmarco_sample_items.json
tests/data/: test_data.py  test_datasets.py  test_loaders.py  test_samplers.py  test_session.py
tests/evaluators/: test_evaluators.py
tests/sample_data/: test_sample_data.py
tests/scorers/: test_BM25Scorer.py  test_DenseScorer.py
tests/trainers/: test_DPRModel.py
