[tool.poetry]
name = "mini-rec-sys"
version = "0.1.0"
description = "Toolkit to train and evaluate models for search and recommendations."
authors = ["Charles Low <charleslow88@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mini_rec_sys"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.26.1"
numpy = ">=1.16.5,<1.23.0"
pandas = ">=1.0.5"
pysos = "^1.3.0"
nltk = "^3.8.1"
lxml = "^4.9.2"
torch = "<2.0.0"
faiss-cpu = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
